# StormReactor

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
StormReactor/: __init__.py  test_links.py  waterQuality.py
StormReactor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
StormReactor/tests/: __init__.py  test_error.py  test_links.py  test_nodes.py
StormReactor/tests/inps/: LinkTest_variableinflow.out  LinkTest_variableinflow.rpt  LinkTest_variableinflow2.rpt  __init__.py  model_constantinflow_constanteffluent.inp  model_constantinflow_constanteffluent_constantremoval.inp  model_constantinflow_constanteffluent_coremoval.inp  model_constantinflow_constanteffluent_gravsettling.inp  model_constantinflow_constanteffluent_kcmodel.inp  model_constantinflow_constanteffluent_nthorderreaction.inp  (+22 more)
src/StormReactor/: waterQuality.py
tests/: test_links.py  test_nodes.py
tests/inps/: LinkTest_variableinflow.inp  LinkTest_variableinflow.out  LinkTest_variableinflow2.inp  model_constantinflow_constanteffluent_concdependent.inp  model_constantinflow_constanteffluent_emc.inp  model_twotanks_constantinflow_constanteffluent_twotreatments.inp  tank_constantinflow_notreatment.inp  tank_variableinflow_concdependent.inp  tank_variableinflow_concdependent.rpt  tank_variableinflow_constantremoval.inp  tank_variableinflow_constantremoval.rpt  tank_variableinflow_emc.rpt  tank_variableinflow_gravsettling.rpt  tank_variableinflow_kcmodel.inp  tank_variableinflow_kcmodel.rpt  tank_variableinflow_nthorderreaction.rpt
