[tool.poetry]
name = "StormReactor"
version = "1.0.0"
description = "StormReactor: Python package for modelling any pollutant generation or treatment method in SWMM"
authors = ["Brooke E. Mason <bemason@umich.edu>", "Abhiram Mullapudi <abhiramm@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.21.2"
pyswmm = "^1.2.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
scikit-learn = "^0.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
